embedded the SVG in a HTML5 document

--- a/common.css
+++ b/common.css
@@ -1,6 +1,23 @@
+
+
+
+
+
+
+/*******************************************************************************
+ =svg styles
+*******************************************************************************/
 svg {
+  position: absolute;
+  top: 0;
+  left: 0;
+  max-height: 100%;
+  max-width: 100%;
+  padding: 0;
+  margin: 0;
   font-family: Verdana;
-  font-size: 12px;
+  font-size: 24px;
+  font-weight: 900;
   fill: #666;
   stroke: none;
 }
@@ -9,13 +26,7 @@ svg {
 
 
 
-
-
-
-
-
-/*******************************************************************************
- =grid
+/* grid
 *******************************************************************************/
 #grid circle,
 #grid line {
@@ -24,20 +35,13 @@ svg {
 }
 #legends text {
   font-weight: bold;
-  text-anchor: start;
 }
 
 
 
 
 
-
-
-
-
-
-/*******************************************************************************
- =chart-us
+/* chart-us
 *******************************************************************************/
 #chart-us {
   stroke: #069;
@@ -57,13 +61,7 @@ svg {
 
 
 
-
-
-
-
-
-/*******************************************************************************
- =chart-tasks
+/* chart-tasks
 *******************************************************************************/
 #chart-tasks {
   fill: #900;
@@ -93,13 +91,7 @@ svg {
 
 
 
-
-
-
-
-
-/*******************************************************************************
- =chart-global
+/* chart-global
 *******************************************************************************/
 #chart-global {
   text-anchor: start;
@@ -124,13 +116,7 @@ svg {
 
 
 
-
-
-
-
-
-/*******************************************************************************
- =chart-local
+/* chart-local
 *******************************************************************************/
 #chart-local {
   text-anchor: start;
