--- a/common.css
+++ b/common.css
@@ -26,6 +26,15 @@ svg {
 
 
 
+/* markers
+*******************************************************************************/
+  #circle {
+    fill: #fff;
+  }
+
+
+
+
 /* grid
 *******************************************************************************/
 #grid circle,
@@ -52,9 +61,6 @@ svg {
   #chart-us text {
     fill: #069;
     stroke: none;
-  }
-  #chart-us circle {
-    fill: #fff;
   }
 
 
@@ -83,9 +89,6 @@ svg {
   #chart-tasks line {
     stroke-width: 3;
   }
-  #chart-tasks circle {
-    fill: #fff;
-  }
 
 
 
@@ -102,12 +105,6 @@ svg {
     stroke: none;
     dominant-baseline: hanging;
   }
-/*
-  #chart-deviation circle,
-  #chart-tasks line {
-    stroke-width: 3;
-  }
-*/
   #chart-global circle {
     stroke: #333;
   }
