fixed legend for local estimation + tweaked tasks marker's dimensions

--- a/common.css
+++ b/common.css
@@ -85,9 +85,10 @@ svg {
     text-anchor: start;
     dominant-baseline: auto;
   }
+  #chart-tasks polyline,
   #chart-tasks circle,
   #chart-tasks line {
-    stroke-width: 3;
+    stroke-width: 4;
   }
 
 
