added a symbol to be used as label when mouse move

--- a/common.css
+++ b/common.css
@@ -247,3 +247,26 @@ svg {
   fill: #ccc;
   stroke: #ccc;
 }
+
+
+
+
+
+
+
+
+
+
+/*******************************************************************************
+ =JavaScript
+*******************************************************************************/
+/*
+.listener:hover {
+  fill: #900;
+}
+*/
+#label {
+  stroke: #090;
+  fill: #fff;
+  stroke-width: 2;
+}
