--- a/common.css
+++ b/common.css
@@ -56,6 +56,7 @@ svg {
   position: relative;
   top: 0;
   left: 0;
+  width: 100%;
   max-height: 100%;
   max-width: 100%;
   padding: 0;
@@ -100,6 +101,9 @@ svg {
 /*******************************************************************************
  =grid svg
 *******************************************************************************/
+#grid.long_sprint {
+  font-size: 18px;
+}
 #grid circle,
 #grid line {
   fill: #ddd;
